# skynet

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile-dev  Dockerfile-prod  Makefile  README.md  SECURITY.md  Skynet  TRANSCRIPT_SAVING.md  compose-dev.yaml  compose-dev.yaml.bak  credentials.yaml.sample  download_model.py  lint.sh  pyproject.toml  requirements-vllm.txt  requirements.txt  run-skynet-requests.py  run.sh  streaming_whisper.Dockerfile  sync-requirements.sh
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  docker.yml  release.yml  static.yml
demos/assistant/: index.html  recorder.worklet.js
demos/js-client/: skynet.mjs
demos/streaming-whisper/: index.html  style.css
docker/: run-skynet.sh
docker/rootfs/etc/apt/sources.list.d/: ffmpeg-ppa.list  python-ppa.list
docs/: README.md  assistant.md  auth.md  env_vars.md  flowchart.drawio  jaas-jwt.sh  monitoring.md  sample.js  streaming_whisper_module.md  summaries_module.md
e2e/: assistant.py  common.py  health.sh  main.py  openai_api.py  run-skynet-requests.py  summaries.py  transcripts.py
integration/: main.py  s3.py
skynet/: agent.py  constants.py  env.py  haproxy_agent.py  http_client.py  index.html  langchain.py  logs.py  main.py  metrics.py  sample.txt  sample_long.txt  utils.py
skynet/apps/: openai_api.py  summaries.py
skynet/auth/: bearer.py  customer_id.py  jwt.py  openai.py  user_info.py  user_info_test.py
skynet/models/: summary.py
skynet/models/v1/: action_items.py  document.py  job.py  summary.py
skynet/modules/: file_watcher.py  monitoring.py  persistence.py
skynet/modules/stt/assistant/: app.py  chunk.py  connection_manager.py  fixie.py  models.py  session_connection.py  state.py
skynet/modules/stt/assistant/v1/: models.py  router.py
skynet/modules/stt/shared/: utils.py
skynet/modules/stt/shared/models/: transcription_response.py  whisper.py
skynet/modules/stt/shared/processes/: recording_worker.py
skynet/modules/stt/streaming_whisper/: ConnectionManager.py  MeetingConnection.py  State.py  app.py  cfg.py  chunk.py  connection_manager.py  meeting_connection.py  state.py
skynet/modules/stt/streaming_whisper/utils/: transcript_saver.py  utils.py  vad_utils.py
skynet/modules/stt/vox/: app.py  connection_manager.py  decoder.py  resampler.py
skynet/modules/ttt/: jobs.py  jobs_test.py  llm_selector.py  oci_utils.py  persistence.py  processor.py  processor_test.py  ratelimit_tracker.py  s3.py  summaries.py  utils.py
skynet/modules/ttt/assistant/: app.py  constants.py  utils.py
skynet/modules/ttt/assistant/v1/: models.py  router.py
skynet/modules/ttt/customer_configs/: app.py  utils.py
skynet/modules/ttt/customer_configs/v1/: models.py  router.py
skynet/modules/ttt/customerconfigs/: app.py  utils.py
skynet/modules/ttt/customerconfigs/v1/: models.py  router.py
skynet/modules/ttt/oci/: utils.py
skynet/modules/ttt/openai_api/: app.py  slim_router.py
skynet/modules/ttt/rag/: app.py  constants.py  utils.py  utils_test.py  vector_store.py  web_crawler.py
skynet/modules/ttt/rag/stores/: faiss.py  s3.py
skynet/modules/ttt/rag/text_extractor/: main.py
skynet/modules/ttt/rag/web_crawler/: main.py  recursive_url_loader.py  url_validator.py
skynet/modules/ttt/rag/zip_extractor/: main.py  main_test.py
skynet/modules/ttt/summaries/: app.py  jobs.py  jobs_test.py  persistence.py  processor.py  processor_queue_test.py
skynet/modules/ttt/summaries/prompts/: action_items.py  common.py  completion.py  image.py  language_detection.py  summary.py  table_of_contents.py
skynet/modules/ttt/summaries/v1/: models.py  router.py
skynet/prompts/: action_items.py  summary.py
skynet/routers/: utils.py  v1.py
tools/: quantize.py
transcripts/: test_meeting_123_20250806_031304.jsonl  test_meeting_123_20250806_031304.srt  test_meeting_123_20250806_031304.txt
transcripts/6d57f8f9-68f9-41f3-ba08-d01024801b35/: 6d57f8f9-68f9-41f3-ba08-d01024801b35.jsonl  6d57f8f9-68f9-41f3-ba08-d01024801b35.srt
transcripts/9f14e745-aa40-407e-bc70-11f6217b8fb8/: 9f14e745-aa40-407e-bc70-11f6217b8fb8.jsonl  9f14e745-aa40-407e-bc70-11f6217b8fb8.srt
transcripts/eca8d2ca-2f45-46a7-959b-18f9664d4163/: eca8d2ca-2f45-46a7-959b-18f9664d4163.jsonl
